Update: Notification system, Cloudinary integration, and route/middleware updates

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "^5.1.5",
     "node-cron": "^4.0.5",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.9",
     "openai": "^4.95.1",
     "pdfkit": "^0.17.1",
