--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "puppeteer": "^24.7.1",
     "react-google-login": "^5.2.2",
     "slugify": "^1.6.6",
+    "twilio": "^5.7.1",
     "uuid": "^11.1.0"
   }
 }
